Added RBAC & basic auth; Modified product tests after sec changes; Added change only the price for product